--- a/index.html
+++ b/index.html
@@ -7,22 +7,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Tetbury & District Residents Association</title>
+    <title>Tetbury & District Independents</title>
 </head>
 
 <body>
+        <div class="container">
+            <b>IT'S OUR COTSWOLDS<b>
+            On 2nd May 2024, voters in the Cotswold District should have the opportunity to vote in a referendum to keep or to 
+            replace the 'Leader and Cabinet' system with a modern committee system. The District Council is currently set up so 
+            that all decision-making powers are concentrated in the hands of 8 Lib Dem councillors. The other 26 councillors - 
+            Lib Dem, Tory, Green, Independent - are excluded. With 3,502 signatures we can force CDC to adopt a more democratic
+            system.
+            <p>
+            <p>
+            It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
+            system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed people who aren't
+            aligned with any party at all.
+            <p>
+            <p>
+            <strong>SIGN THE PETITION TODAY</strong>
+            https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform
+            <p>
+            <p>
     <div class="container">
-        <h1>Tetbury &amp; District Residents Association</h1>
+        <h1>Tetbury &amp; District Independents</h1>
         <div class="img-container">
             <img src="/images/image1.jpg" alt="Heading Image">
         </div>
         <p>
         <p>
-            Chris Twells was elected as the new District Councillor for Tetbury with Upton
-            ward in May 2023. He sits as a member of the &lsquo;Tetbury and District Independents&rsquo; on
-            Cotswold District Council.
-        </p>
-
+            <b>ABOUT CHRIS TWELLS<b>
+            Chris Twells was elected as the new District Councillor for Tetbury with Upton 
+            ward in May 2023. He sits as a Tetbury & District Independent member of Cotswold 
+            District Council. Chris studied Law at the University of York and takes an interest
+            in constitutional and electoral law.
+            <p>
+            Chris has ten years' experience as a professional political campaigner and community
+            organiser, winning against both the Labour and Conservative parties in some of the most
+            deprived areas of England.
+            </p>
         <dl>
             <dt>Email</dt>
             <dd>
@@ -30,7 +53,7 @@
                     chris.twells@cotswold.gov.uk
                 </a>
             </dd>
-            <dt>Phone</dt>
+            <dt>Mobile</dt>
             <dd>07546 364756</dd>
         </dl>
     </div>
