--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-        <div class="container">
-            <b>IT'S OUR COTSWOLDS<b>
+    <div class="container">
+        <h1>IT'S OUR COTSWOLDS</h1>
+        </div>
+            <p>
+            <p>
             On 2nd May 2024, voters in the Cotswold District should have the opportunity to vote in a referendum to keep or to 
             replace the 'Leader and Cabinet' system with a modern committee system. The District Council is currently set up so 
             that all decision-making powers are concentrated in the hands of 8 Lib Dem councillors. The other 26 councillors - 
@@ -26,7 +29,11 @@
             <p>
             <p>
             <strong>SIGN THE PETITION TODAY</strong>
-            https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform
+            <p>
+            <p>
+            <a href="<p>">CLICK HERE TO BACK THE CAMPAIGN</a> - we need 3502 signatures from residents of
+            the Cotswold District to trigger a referendum to change from the 'Leader and Cabinet' model to 
+            the more democratic Modern Committee system
             <p>
             <p>
     <div class="container">
