--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             aligned with any party at all.
             <p>
             <p>
-            <strong>SIGN THE PETITION TODAY</strong>
+            <strong>BACK THE CAMPAIGN TODAY</strong>
             <p>
+            <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
             <p>
-            <a href="<p>">CLICK HERE TO BACK THE CAMPAIGN</a> - we need 3502 signatures from residents of
-            the Cotswold District to trigger a referendum to change from the 'Leader and Cabinet' model to 
-            the more democratic Modern Committee system
+            We need 3502 signatures from residents of the Cotswold District to trigger a referendum and have a big, fair
+            and inclusive debate about changing from the 'Leader and Cabinet' model to the democratic Modern Committee system
             <p>
             <p>
     <div class="container">
