--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         </div>
             <p>
             <p>
-            On 2nd May 2024, voters in the Cotswold District should have the opportunity to vote in a referendum to keep or to 
+            On 2<sup>nd<sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to keep or to 
             replace the 'Leader and Cabinet' system with a modern committee system. The District Council is currently set up so 
-            that all decision-making powers are concentrated in the hands of 8 Lib Dem councillors. The other 26 councillors - 
-            Lib Dem, Tory, Green, Independent - are excluded. With 3,502 signatures we can force CDC to adopt a more democratic
-            system.
+            that all decision-making power is concentrated in the hands of the Leader and 7 Lib Dem councillors, "the Cabinet". The
+            other 26 councillors - Lib Dem, Conservative, Green or Independent - are excluded. With 3,502 signatures we can force
+            CDC to adopt a more democratic system.
             <p>
             <p>
             It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
-            system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed people who aren't
-            aligned with any party at all.
+            system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed many people who aren't
+            aligned to any party at all.
             <p>
             <p>
             <strong>BACK THE CAMPAIGN TODAY</strong>
             <p>
             <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
             <p>
-            We need 3502 signatures from residents of the Cotswold District to trigger a referendum and have a big, fair
-            and inclusive debate about changing from the 'Leader and Cabinet' model to the democratic Modern Committee system
+            We need 3,502 signatures from residents of the Cotswold District to trigger a referendum and have an open, fair
+            and inclusive debate about changing from the 'Leader and Cabinet' model to the democratic Modern Committee system.
             <p>
             <p>
     <div class="container">
@@ -50,8 +50,7 @@
             in constitutional and electoral law.
             <p>
             Chris has ten years' experience as a professional political campaigner and community
-            organiser, winning against both the Labour and Conservative parties in some of the most
-            deprived areas of England.
+            organiser, running winning campaigns against in some of the most deprived areas of England.
             </p>
         <dl>
             <dt>Email</dt>
