--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
             <p>
             <p>
-            On 2<sup>nd<sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to keep or to 
+            On 2<sup>nd</sup>sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to keep or to 
             replace the 'Leader and Cabinet' system with a modern committee system. The District Council is currently set up so 
             that all decision-making power is concentrated in the hands of the Leader and 7 Lib Dem councillors, "the Cabinet". The
             other 26 councillors - Lib Dem, Conservative, Green or Independent - are excluded. With 3,502 signatures we can force
