--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
             <p>
             <p>
-            On 2<sup>nd</sup>sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to keep or to 
-            replace the 'Leader and Cabinet' system with a modern committee system. The District Council is currently set up so 
+            On Thursday 2<sup>nd</sup>> May 2024, voters in the Cotswold District have the opportunity to vote in a referendum to 
+            replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
             that all decision-making power is concentrated in the hands of the Leader and 7 Lib Dem councillors, "the Cabinet". The
             other 26 councillors - Lib Dem, Conservative, Green or Independent - are excluded. With 3,502 signatures we can force
             CDC to adopt a more democratic system.
@@ -43,14 +43,14 @@
         </div>
         <p>
         <p>
-            <b>ABOUT CHRIS TWELLS<b>
+            <b>ABOUT CHRIS</b>
             Chris Twells was elected as the new District Councillor for Tetbury with Upton 
-            ward in May 2023. He sits as a Tetbury & District Independent member of Cotswold 
+            ward in May 2023. He sits as one of the Tetbury & District Independents at Cotswold 
             District Council. Chris studied Law at the University of York and takes an interest
             in constitutional and electoral law.
             <p>
             Chris has ten years' experience as a professional political campaigner and community
-            organiser, running winning campaigns against in some of the most deprived areas of England.
+            organiser, running successful campaigns in some of the most deprived areas of England.
             </p>
         <dl>
             <dt>Email</dt>
