--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
             <p>
             <p>
-            On Thursday 2<sup>nd</sup>> May 2024, voters in the Cotswold District have the opportunity to vote in a referendum to 
+            On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District have the opportunity to vote in a referendum to 
             replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
             that all decision-making power is concentrated in the hands of the Leader and 7 Lib Dem councillors, "the Cabinet". The
-            other 26 councillors - Lib Dem, Conservative, Green or Independent - are excluded. With 3,502 signatures we can force
+            other 26 councillors - Lib Dem, Conservative, Green and Independent - are locked out. With 3,502 signatures we can force
             CDC to adopt a more democratic system.
             <p>
             <p>
@@ -33,7 +33,8 @@
             <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
             <p>
             We need 3,502 signatures from residents of the Cotswold District to trigger a referendum and have an open, fair
-            and inclusive debate about changing from the 'Leader and Cabinet' model to the democratic Modern Committee system.
+            and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
+            Modern Committee system.
             <p>
             <p>
     <div class="container">
