--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>
             <p>
     <div class="container">
-        <h1>Tetbury &amp; District Independents</h1>
+        <h1>OUR COTSWOLDS</h1>
         <div class="img-container">
             <img src="/images/image1.jpg" alt="Heading Image">
         </div>
