--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
             <p>
             <p>
-            On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District have the opportunity to vote in a referendum to 
+            On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to 
             replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
-            that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem councillors, "the Cabinet". The
+            that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem councillors, the Cabinet. The
             other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out. With 3,502 signatures we,
-            the residents of the Cotswols, can use the Localism Act to change our council to adopt a more democratic system.
+            the residents of the Cotswolds, can use the Localism Act to change our council to adopt a more democratic system.
             <p>
             <p>
             It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
