--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <h1>OUR COTSWOLDS</h1>
         <div class="img-container">
-            <img src="/images/image1.jpg" alt="Heading Image">
+            <img src="/image1.jpg" alt="Heading Image">
         </div>
         <p>
         <p>
