--- a/tetburylibdems/index.html
+++ b/tetburylibdems/index.html
@@ -17,11 +17,9 @@
         </div>
         <p>
         <p>
-            Chris Twells was elected as the Liberal Democrat councillor for Tetbury with Upton
-            ward in May 2023. He sits as a member of the &lsquo;Tetbury and District Independents&rsquo; on
-            Cotswold District Council.
+        Chris Twells was elected as the Liberal Democrat councillor for Tetbury with Upton
+        ward in May 2023. He sits as a Tetbury & District Independent on the District Council.
         </p>
-
         <dl>
             <dt>Email</dt>
             <dd>
@@ -32,7 +30,6 @@
             <dt>Phone</dt>
             <dd>07546 364756</dd>
             <dt>Address</dt>
-            <dd>4 Ormand Close, Cirencester, GL7 1GJ</dd>
         </dl>
     </div>
 </body>
