--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             the Cotswolds can, however, use a provision of the Localism Act to ensure our council is run on a more democratic basis.
             <p>
             <p>
-            Cross-party campaigns in Sheffield and Bristol have led the way - grassroots campaigns have scrapped the Cabinet model.
+            <b>Cross-party campaigns in Sheffield and Bristol have led the way - grassroots campaigns have scrapped the Cabinet model.</b>
             <p>
             <p>
             It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
@@ -43,17 +43,18 @@
     <div class="container">
         <h1>OUR COTSWOLDS</h1>
         <div class="img-container">
-            <img src="/image1.jpg" alt="Heading Image">
+        <img src="image1.jpg" alt="Heading Image">
         </div>
         <p>
         <p>
-            <b>ABOUT CHRIS</b>
+        <b>ABOUT CHRIS</b>
         <p>
         <p>
         Chris Twells was elected as the new District Councillor for Tetbury with Upton 
         ward in May 2023. He sits as one of the Tetbury & District Independents at Cotswold 
         District Council. Chris studied Law at the University of York and takes an interest
         in constitutional and electoral law.
+        <p>
         <p>
         Chris has ten years' experience as a professional political campaigner and community
         organiser, running successful campaigns in some of the most deprived areas of England.
