--- a/index.html
+++ b/index.html
@@ -23,24 +23,29 @@
             the Cotswolds can, however, use a provision of the Localism Act to ensure our council is run on a more democratic basis.
             <p>
             <p>
+    <div class="container">
             <b>Cross-party campaigns in Sheffield and Bristol have led the way - grassroots campaigns have scrapped the Cabinet model.</b>
             <p>
             <p>
+    <div class="container">
             It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
             system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed many people who aren't
             aligned to any party at all.
             <p>
             <p>
+    <div class="container">
             <strong>BACK THE CAMPAIGN TODAY</strong>
+            <p>
             <p>
             <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
             <p>
-            We need 3,502 signatures from residents of the Cotswold District to trigger a referendum and have an open, fair
-            and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
-            Modern Committee system.
-            <p>
             <p>
     <div class="container">
+            We need 3,502 signatures from residents of the Cotswold District to trigger a referendum and have an open, fair
+            and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
+            <a href='https://www.itsourcitybristol.org/committee' target='_blank' rel='noreferrer'>Modern Committee system</a>.
+            <p>
+            <p>
         <h1>OUR COTSWOLDS</h1>
         <div class="img-container">
         <img src="image1.jpg" alt="Heading Image">
@@ -66,8 +71,6 @@
                     chris.twells@cotswold.gov.uk
                 </a>
             </dd>
-            <dt>Mobile</dt>
-            <dd>07546 364756</dd>
         </dl>
     </div>
 </body>
