--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Tetbury & District Independents</title>
+    <title>Our Cotswolds</title>
 </head>
 <body>
     <div class="container">
-    <h1>IT'S OUR COTSWOLDS</h1>
+    <h1>OUR COTSWOLDS</h1>
     <p>
     On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to 
     replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
     that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem councillors, the Cabinet. The
-    other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out. Ordinary residents of
-    the Cotswolds can, however, use a provision of the Localism Act to ensure our council is run on a more democratic basis.
+    other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out. Ordinary Cotswold voters
+    can, however, use a provision of the Localism Act to ensure our council is run on a more democratic basis.
     </div>
     <p>
     <div class="container">
@@ -55,7 +54,6 @@
     Chris has ten years' experience as a professional political campaigner and community
     organiser, running successful campaigns in some of the most deprived areas of England.
     </p>
-    </div>
     <dl>
     <dt>Email</dt>
     <dd>
