--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
     <h1>OUR COTSWOLDS</h1>
     <p>
-    On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District can have the opportunity to vote in a referendum to 
+    On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District could have an opportunity to vote in a referendum to 
     replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
     that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem councillors, the Cabinet. The
     other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out. Ordinary Cotswold voters
@@ -19,7 +19,8 @@
     </div>
     <p>
     <div class="container">
-    <b>Cross-party campaigns in Sheffield and Bristol have led the way - grassroots campaigns have scrapped the Cabinet model.</b>
+    <b>Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have scrapped the
+    undemocratic Cabinet model, based on the feudal Leader's patronage.</b>
     </div>
     <p>
     <div class="container">
@@ -34,14 +35,16 @@
     <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
     <p>
     <div class="container">
-    We need 3,502 signatures from residents of the Cotswold District to trigger a referendum and have an open, fair
-    and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
-    <a href='https://www.itsourcitybristol.org/committee' target='_blank' rel='noreferrer'>Modern Committee system</a>.
+    3,502 signatures from residents of the Cotswold District would, by law, trigger a referendum and provide for an open,
+    fair and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
+    <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank' rel='noreferrer'>'Modern Committee' system</a>.
     </div>
+    <p>
     <p>
     <h1>OUR COTSWOLDS</h1>
     <div class="img-container">
     <img src="image1.jpg" alt="Heading Image">
+    <p>
     <p>
     </div>
     <b>ABOUT CHRIS</b>
