--- a/index.html
+++ b/index.html
@@ -1,72 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Our Cotswolds</title>
 </head>
+
 <body>
     <div class="container">
-    <h1>OUR COTSWOLDS</h1>
-    <p>
-    On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District could have an opportunity to vote in a referendum to 
-    replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District Council is currently set up so 
-    that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem councillors, the Cabinet. The
-    other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out. Ordinary Cotswold voters
-    can, however, use a provision of the Localism Act to ensure our council is run on a more democratic basis.
+        <h1>OUR COTSWOLDS</h1>
+        <p>
+            On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District could have an opportunity to vote in a
+            referendum to replace the 'Leader and Cabinet' system with the 'Modern Committee' model. The District
+            Council is
+            currently set
+            up so that all decision-making power is concentrated in the hands of the Leader and seven Lib Dem
+            councillors,
+            the
+            Cabinet. The other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked
+            out.
+            Ordinary
+            Cotswold voters can, however, use a provision of the Localism Act to ensure our council is run on a more
+            democratic basis.
+        </p>
+
+        <p>
+            Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have
+            scrapped
+            the undemocratic Cabinet model, based on the feudal Leader's patronage.
+        </p>
+
+        <p>
+            It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative
+            committee system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed
+            many
+            people who
+            aren't aligned to any party at all.
+        </p>
+        <p>
+            <strong>BACK THE CAMPAIGN TODAY</strong>
+        </p>
+        <p>
+            <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform'
+                target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
+        </p>
+        <p>
+            3,502 signatures from residents of the Cotswold District would, by law, trigger a referendum and provide for
+            an
+            open,
+            fair and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more
+            democratic
+            <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank' rel='noreferrer'>'Modern Committee'
+                system</a>.
+        </p>
+
+        <h1>OUR COTSWOLDS</h1>
+
+        <div class="img-container">
+            <img src="image1.jpg" alt="Heading Image">
+        </div>
+        <p>
+
+            <b>ABOUT CHRIS</b>
+        </p>
+        <p>
+            Chris Twells was elected as the new District Councillor for Tetbury with Upton
+            ward in May 2023. He sits as one of the Tetbury & District Independents at Cotswold
+            District Council. Chris studied Law at the University of York and takes an interest
+            in constitutional and electoral law.
+        </p>
+        <p>
+            Chris has ten years' experience as a professional political campaigner and community
+            organiser, running successful campaigns in some of the most deprived areas of England.
+        </p>
+        <dl>
+            <dt>Email</dt>
+            <dd>
+                <a href="mailto:chris.twells@cotswold.gov.uk">
+                    chris.twells@cotswold.gov.uk
+                </a>
+            </dd>
+        </dl>
     </div>
-    <p>
-    <div class="container">
-    <b>Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have scrapped the
-    undemocratic Cabinet model, based on the feudal Leader's patronage.</b>
-    </div>
-    <p>
-    <div class="container">
-    It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative committee
-    system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed many people who aren't
-    aligned to any party at all.
-    </div>
-    <p>
-    <div class="container">
-    <strong>BACK THE CAMPAIGN TODAY</strong>
-    <p>
-    <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform' target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
-    <p>
-    <div class="container">
-    3,502 signatures from residents of the Cotswold District would, by law, trigger a referendum and provide for an open,
-    fair and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more democratic
-    <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank' rel='noreferrer'>'Modern Committee' system</a>.
-    </div>
-    <p>
-    <p>
-    <h1>OUR COTSWOLDS</h1>
-    <div class="img-container">
-    <img src="image1.jpg" alt="Heading Image">
-    <p>
-    <p>
-    </div>
-    <b>ABOUT CHRIS</b>
-    <p>
-    <p>
-    Chris Twells was elected as the new District Councillor for Tetbury with Upton 
-    ward in May 2023. He sits as one of the Tetbury & District Independents at Cotswold 
-    District Council. Chris studied Law at the University of York and takes an interest
-    in constitutional and electoral law.
-    <p>
-    <p>
-    Chris has ten years' experience as a professional political campaigner and community
-    organiser, running successful campaigns in some of the most deprived areas of England.
-    </p>
-    <dl>
-    <dt>Email</dt>
-    <dd>
-    <a href="mailto:chris.twells@cotswold.gov.uk">
-    chris.twells@cotswold.gov.uk
-    </a>
-    </dd>
-    </dl>
-</div>
 </body>
+
 </html>
