--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>
         <p>
         <dl>
-            <dt>Get in touch with Chris:</dt>
+            <dt>Get in touch:</dt>
             <dd>
             <a href="mailto:chris.twells@cotswold.gov.uk">
             chris.twells@cotswold.gov.uk
