--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <p>
         <p>
         Chris was elected as the new District Councillor for Tetbury with Upton ward in
-        May 2023, winning the seat from fourth place with the biggest swing of the 2023 elections.
-        He sits as a Tetbury & District Independent.
+        May 2023, winning his seat from fourth place with the biggest swing of the election.
+        He sits as a Tetbury & District Independent and does not take a party whip.
         </p>
         <p>
         <p>
