--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="icon.svg">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" type="image/x-icon" href="/icon.svg">
     <title>Our Cotswolds</title>
 </head>
 
@@ -34,7 +34,7 @@
             more democratic <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank'
                 rel='noreferrer'>Modern Committee system</a>.
         </p>
-        <img src="image1.jpg" alt="Heading Image">
+        <img src="/image1.jpg" alt="Heading Image">
         <p>
             Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have
             forced their councils to scrap the undemocratic Cabinet model, which relies on the Leader's patronage.
