Add more pictures

--- a/garden-plan/index.html
+++ b/garden-plan/index.html
@@ -64,6 +64,11 @@
             length</p>
         <p>We would like the fence to be shortened to be a standard length and the gate to be replaced with a wider gate
         </p>
+        <h2>Existing Garden Images</h2>
+        <img src="images/upper-view.jpg" alt="">
+        <img src="images/lower-view-1.jpg" alt="">
+        <img src="images/lower-view-2.jpg" alt="">
+        <img src="images/gate-view.jpg" alt="">
     </main>
 </body>
 
